próba dodania kategorii z osobnej tabeli BD

--- a/administrator/components/com_repertoire/models/forms/song.xml
+++ b/administrator/components/com_repertoire/models/forms/song.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form>
+<form addrulepath="/administrator/components/com_repertoire/models/rules">
     <fieldset>
 		
         <field
@@ -21,20 +21,21 @@
             default=""
         />
         <field
+            name="category"
+            type="category"
+            extension="com_repertoire"
+            label="COM_REPERTOIRE_CATEGORY"
+            description="COM_REPERTOIRE_CATEGORY_DESC"
+            class="inputbox"
+            default="">
+            <option value="0">JOPTION_SELECT_CATEGORY</option>
+        </field>
+        <field
             name="language"
             type="text"
             label="COM_REPERTOIRE_LANGUAGE"
             description="COM_REPERTOIRE_LANGUAGE_DESC"
             size="20"
-            class="inputbox"
-            default=""
-        />
-        <field
-            name="category"
-            type="text"
-            label="COM_REPERTOIRE_CATEGORY"
-            description="COM_REPERTOIRE_CATEGORY_DESC"
-            size="30"
             class="inputbox"
             default=""
         />
